<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:contentDescription="@string/back_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@drawable/baseline_arrow_back_24"
            android:tint="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitStart"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:foregroundGravity="center" />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/profile_bar" />

    <ImageView
        android:id="@+id/profile_picture"
        android:contentDescription="@string/profile_picture"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:background="@drawable/circle"
        android:backgroundTint="#000"
        android:padding="1dp"/>

</android.support.constraint.ConstraintLayout>