<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.steemit.dchestra.PostList
            android:id="@+id/list_post"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fillViewport="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_feed"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/page_feed"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/feedBar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_trending"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/page_trending"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/feedBar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_new"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/page_new"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/feedBar"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_home"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Home"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/navBar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_search"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Search"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/navBar"
            android:textSize="18sp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>